--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
+    "ipython>=9.5.0",
     "langchain>=0.3.27",
     "langchain-mcp-adapters>=0.1.9",
     "langchain-openai>=0.3.32",
